# ddd-fastapi-boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/application/: __init__.py
app/application/interfaces/: __init__.py  user_repository.py
app/application/use_cases/: __init__.py  user_use_cases.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  user.py
app/domain/value_objects/: __init__.py  email.py
app/infrastructure/: __init__.py
app/infrastructure/api/: __init__.py  dependencies.py
app/infrastructure/api/routes/: __init__.py  ping_pong.py  user_routes.py
app/infrastructure/config/: settings.py
app/infrastructure/database/: mongodb.py
app/infrastructure/database/repositories/: __init__.py  mongodb_user_repository.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/integration/api/: __init__.py  test_ping.py
tests/integration/database/: __init__.py
tests/unit/: __init__.py
tests/unit/application/: __init__.py
tests/unit/application/interfaces/: __init__.py
tests/unit/application/use_cases/: __init__.py
tests/unit/domain/: __init__.py
tests/unit/domain/entities/: __init__.py
tests/unit/domain/value_objects/: __init__.py
tests/unit/infrastructure/: __init__.py
tests/unit/infrastructure/api/: __init__.py
tests/unit/infrastructure/api/routes/: __init__.py
tests/unit/infrastructure/config/: __init__.py
tests/unit/infrastructure/database/: __init__.py
tests/unit/infrastructure/database/repositories/: __init__.py
