[project]
name = "ddd-fastapi-boilerplate"
version = "0.0.0"
description = "DDD FastAPI Boilerplate"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi[standard]>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "motor>=3.3.2",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
]


[project.optional-dependencies]
dev = [
    "ruff>=0.2.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
]

